spacing fix on captions to images

--- a/css/Components/components.css
+++ b/css/Components/components.css
@@ -131,6 +131,9 @@
 		height: 0px;
 	}
 }
+.spacing-60px {
+	height: 60px;
+}
 .spacing-70px {
 	height: 70px;
 }
